# ai-agent

./: .gitignore  README.md  agent.py  mcp_servers.json  pyproject.toml  requirements.txt  run.ps1  run_playground.ps1  start_chrome.ps1
.claude/: settings.local.json
extension/: content.js  manifest.json
scripts/: browser_mcp_server.py  mysql_mcp_server.py
src/: __main__.py  agent.py  mcp.py  server.py  tools.py
src/static/: index.html
web/: chat_server.py  index.html
