[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deepseek-mcp-agent"
version = "1.0.0"
description = "AI Agent with MCP support powered by DeepSeek Anthropic API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "pymysql>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=10.0",
    "playwright>=1.50.0",
]

[project.scripts]
agent = "src.__main__:entry_point"
